# Thermodynamic-Cycle-Simulator

./: .gitignore  CMakeLists.txt  compilation.sh  images.qrc  main.cpp  readme.md
computation/: computation.cpp  computation.h  computation.md
computation/algorithms/: algorithms.md  compression.cpp  compression.h  expansion.cpp  expansion.h  heat_addition.cpp  heat_addition.h  heat_rejection.cpp  heat_rejection.h  overall_performance.cpp  overall_performance.h  test  test.cpp  test_compression.cpp  thermo_state.cpp  thermo_state.h
computation/cycles/: brayton.cpp  brayton.h  diesel.cpp  diesel.h  otto.cpp  otto.h
computation/tools/: gas.cpp  gas.h  gas_calculations.md
gui/: gui.md
gui/src/cpp_files/: brayton_inputs.cpp  diagram_generation.cpp  diesel_inputs.cpp  error_window.cpp  help_window.cpp  main_window.cpp  otto_inputs.cpp  performance.cpp  selection.cpp  states_window.cpp
gui/src/headers/: brayton_inputs.h  diagram_generation.h  diesel_inputs.h  error_window.h  help_window.h  main_window.h  otto_inputs.h  performance.h  selection.h  states_window.h
gui/ui/: Help_window.ui  Performance_window.ui  States_window.ui  brayton_inputs.ui  diesel_inputs.ui  incorrect_input_window.ui  main_window.ui  otto_inputs.ui  selector_window.ui
output/: brayton_cycle.csv  brayton_performance.csv  cycle.csv  performance.csv
